--- a/guide/list.html
+++ b/guide/list.html
@@ -382,9 +382,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-18</td>
                     <td class="ex_end">08-18</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -395,9 +395,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-18</td>
                     <td class="ex_end">08-18</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -408,9 +408,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-18</td>
                     <td class="ex_end">08-18</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -421,9 +421,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-18</td>
                     <td class="ex_end">08-18</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -434,9 +434,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-18</td>
                     <td class="ex_end">08-18</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -447,9 +447,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-18</td>
                     <td class="ex_end">08-18</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -460,9 +460,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-19</td>
                     <td class="ex_end">08-19</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg), dropdown in column</td>
                 </tr>
                 <tr class="">
@@ -473,9 +473,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-19</td>
                     <td class="ex_end">08-19</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td>alert(320)</td>
                 </tr>
                 <tr class="">
@@ -486,9 +486,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-19</td>
                     <td class="ex_end">08-19</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(480)</td>
                 </tr>
                 <tr class="">
@@ -499,9 +499,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-19</td>
                     <td class="ex_end">08-19</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-18</td>
+                    <td class="date_end">08-18</td>
+                    <td class="state" data-state="done"></td>
                     <td>alert(320)</td>
                 </tr>
                 <tr class="">
@@ -514,7 +514,7 @@
                     <td class="ex_end">08-19</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="do">
@@ -527,7 +527,7 @@
                     <td class="ex_end">08-19</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
                
