<그리드> - sortable: true 옵션적용 - resizable 스타일 적용 - 내용없음 스타일 적용 - Locked: true 스타일 적용 - “NO” 컬럼 센터 정렬 및 sortable: false 적용 <페이지> 계약 > 고객담보관리 계약 > 본/지사관리

--- a/pages/SA/SA010101.html
+++ b/pages/SA/SA010101.html
@@ -94,7 +94,7 @@
                                 data-toolbar="#=toolbarTemplate()#"
                                 data-columns='[
                                     { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 60, "template": "#=checkboxTemplate()#" },
-                                    { "title": "NO.", "width": 50 },
+                                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                                     { "field": "상품코드", "width": 90 },
                                     { "field": "상품명", "width": 170 },
                                     { "field": "어플리케이션", "width": 146 },
