--- a/pages/SA/SA010601.html
+++ b/pages/SA/SA010601.html
@@ -96,7 +96,7 @@
                                     data-sortable="true" 
                                     data-editable="true" 
                                     data-columns='[
-                                    { "title": "NO.", "width": 50 },
+                                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                                     { "field": ""  }
                                     ]' 
                                     data-bind="source: gridSource"
