--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -200,7 +200,7 @@
                     data-editable="false" 
                     data-columns='[
                     { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                    { "title": "NO.", "width": 50 },
+                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                     { "field": "상품코드", "width": 90 },
                     { "field": "상품명", "width": 170 },
                     { "field": "어플리케이션", "width": 146 },
@@ -247,7 +247,7 @@
         data-editable="false" 
         data-columns='[
         { "title": "&lt;div class=h-checkbox>&lt;input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox />&lt;label for=checkbox-nolabel>&lt;/label>&lt;/div>", "width": 50, "template": "#=checkboxTemplate()#" },
-        { "title": "NO.", "width": 50 },
+        { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
         { "field": "상품코드", "width": 90 },
         { "field": "상품명", "width": 170 },
         { "field": "어플리케이션", "width": 146 },
@@ -288,38 +288,42 @@
             <p class="title">Grid Filter</p>
         </div>
         <div class="g-example-body">
+            <!-- toolbar template -->
+            <script type="text/x-kendo-template" class="toolbarTemplate">
+                <div class="title-box sm mt-20">
+                    <div class="left-group">
+                        <span class="amount-set">
+                            <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                            <span class="amount">26</span><span class="unit">건</span>
+                        </span>
+                    </div>
+                    <div class="right-group">
+                        <div class="btn-box">
+                            <button role="button" class="k-button">수정</button>
+                            <button role="button" class="k-button k-grid-add">등록</button>
+                        </div>
+                    </div>
+                </div>
+            </script>
+            <!-- checkbox template -->
+            <script type="text/x-kendo-template" class="checkboxTemplate">
+                <div class="h-checkbox no-label">
+                    <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                    <label for="checkbox-nolabel"></label> 
+                </div>
+            </script>
             <div class="table-content grid has-bottom" id="viewModel_grid_filter">
-                <!-- toolbar template -->
-                <script type="text/x-kendo-template" class="toolbarTemplate">
-                    <div class="title-box sm mt-20">
-                        <div class="left-group">
-                            <span class="amount-set">
-                                <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
-                                <span class="amount">26</span><span class="unit">건</span>
-                            </span>
-                        </div>
-                        <div class="right-group">
-                            <div class="btn-box">
-                                <button role="button" class="k-button">수정</button>
-                                <button role="button" class="k-button k-grid-add">등록</button>
-                            </div>
-                        </div>
-                    </div>
-                </script>
-                <!-- checkbox template -->
-                <script type="text/x-kendo-template" class="checkboxTemplate">
-                    <div class="h-checkbox no-label">
-                        <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
-                        <label for="checkbox-nolabel"></label> 
-                    </div>
-                </script>
                 <div data-role="grid" 
                     data-sortable="true" 
                     data-editable="true" 
+                    data-resizable="true"
+                    data-noRecords="true"
+                    data-scrollable= "{ virtual: true }"
+                    data-no-records="{ template : '<p>검색을 이용해 주세요.</p>'}"
                     data-columns='[
                     { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                    { "title": "NO.", "width": 50 },
-                    { "field": "상품코드", "width": 90 },
+                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
+                    { "field": "상품코드", "width": 90, "locked": true },
                     { "field": "상품명", "width": 170 },
                     { "field": "어플리케이션", "width": 146 },
                     { "field": "표준가격", "width": 140 },
@@ -331,7 +335,11 @@
                     ]' 
                     data-bind="source: gridSource"
                     data-toolbar="#=toolbarTemplate()#"
-                    data-filterable="{mode:'row'}">
+                    data-filterable="{mode:'row', operators: {
+                            string: { contains: 'contains' },
+                            enums: { eq: 'eq' }
+                        }
+                    }" style="height: 420px">
                 </div>
                 <div class="table-bottom">
                     <button data-role="button" class="gray-border">삭제</button>
@@ -364,37 +372,37 @@
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
+&lt;!-- toolbar template -->
+&lt;script type="text/x-kendo-template" class="toolbarTemplate">
+    &lt;div class="title-box sm mt-20">
+        &lt;div class="left-group">
+            &lt;span class="amount-set">
+                &lt;span class="amount current">1&lt;/span>&lt;span class="unit">건&lt;/span>&lt;span class="dash">/&lt;/span>
+                &lt;span class="amount">26&lt;/span>&lt;span class="unit">건&lt;/span>
+            &lt;/span>
+        &lt;/div>
+        &lt;div class="right-group">
+            &lt;div class="btn-box">
+                &lt;button role="button" class="k-button">수정&lt;/button>
+                &lt;button role="button" class="k-button k-grid-add">등록&lt;/button>
+            &lt;/div>
+        &lt;/div>
+    &lt;/div>
+&lt;/script>
+&lt;!-- checkbox template -->
+&lt;script type="text/x-kendo-template" class="checkboxTemplate">
+    &lt;div class="h-checkbox no-label">
+        &lt;input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+        &lt;label for="checkbox-nolabel">&lt;/label> 
+    &lt;/div>
+&lt;/script>
 &lt;div class="table-content grid has-bottom" id="viewModel_grid_filter">
-    &lt;!-- toolbar template -->
-    &lt;script type="text/x-kendo-template" class="toolbarTemplate">
-        &lt;div class="title-box sm mt-20">
-            &lt;div class="left-group">
-                &lt;span class="amount-set">
-                    &lt;span class="amount current">1&lt;/span>&lt;span class="unit">건&lt;/span>&lt;span class="dash">/&lt;/span>
-                    &lt;span class="amount">26&lt;/span>&lt;span class="unit">건&lt;/span>
-                &lt;/span>
-            &lt;/div>
-            &lt;div class="right-group">
-                &lt;div class="btn-box">
-                    &lt;button role="button" class="k-button">수정&lt;/button>
-                    &lt;button role="button" class="k-button k-grid-add">등록&lt;/button>
-                &lt;/div>
-            &lt;/div>
-        &lt;/div>
-    &lt;/script>
-    &lt;!-- checkbox template -->
-    &lt;script type="text/x-kendo-template" class="checkboxTemplate">
-        &lt;div class="h-checkbox no-label">
-            &lt;input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
-            &lt;label for="checkbox-nolabel">&lt;/label> 
-        &lt;/div>
-    &lt;/script>
     &lt;div data-role="grid" 
         data-sortable="true" 
         data-editable="true" 
         data-columns='[
         { "title": "&lt;div class=h-checkbox>&lt;input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox />&lt;label for=checkbox-nolabel>&lt;/label>&lt;/div>", "width": 50, "template": "#=checkboxTemplate()#" },
-        { "title": "NO.", "width": 50 },
+        { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
         { "field": "상품코드", "width": 90 },
         { "field": "상품명", "width": 170 },
         { "field": "어플리케이션", "width": 146 },
@@ -482,7 +490,7 @@
                     data-editable="true" 
                     data-columns='[
                     { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                    { "title": "NO.", "width": 50 },
+                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                     { "field": ""  }
                     ]' 
                     data-bind="source: gridSource"
@@ -554,7 +562,7 @@
         data-editable="true" 
         data-columns='[
         { "title": "&lt;div class=h-checkbox>&lt;input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox />&lt;label for=checkbox-nolabel>&lt;/label>&lt;/div>", "width": 50, "template": "#=checkboxTemplate()#" },
-        { "title": "NO.", "width": 50 },
+        { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
         { "field": ""  }
         ]' 
         data-bind="source: gridSource"
@@ -611,10 +619,10 @@
                 </script>
                 <div class="table-content grid" id="viewModel_number">
                     <div data-role="grid" 
-                        data-sortable="false" 
+                        data-sortable="true" 
                         data-editable="true" 
                         data-columns='[
-                        { "title": "NO.", "field":"NO", "width": 50, "attributes" : {"class": "text-center"} },
+                        { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                         { "field": ""  }
                         ]' 
                         data-bind="source: gridSource"
@@ -664,10 +672,10 @@
     &lt;/script>
     &lt;div class="table-content grid" id="viewModel_number">
         &lt;div data-role="grid" 
-            data-sortable="false" 
+            data-sortable="true" 
             data-editable="true" 
             data-columns='[
-            { "title": "NO.", "field":"NO", "width": 50, "attributes" : {"class": "text-center"} },
+            { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
             { "field": ""  }
             ]' 
             data-bind="source: gridSource"
