--- a/guide/list.html
+++ b/guide/list.html
@@ -512,9 +512,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-19</td>
                     <td class="ex_end">08-19</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="date_start">08-19</td>
+                    <td class="date_end">08-19</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="do">
@@ -539,9 +539,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-20</td>
                     <td class="ex_end">08-20</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-19</td>
+                    <td class="date_end">08-19</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -552,9 +552,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-20</td>
                     <td class="ex_end">08-20</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-19</td>
+                    <td class="date_end">08-19</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -565,9 +565,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-20</td>
                     <td class="ex_end">08-20</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-19</td>
+                    <td class="date_end">08-19</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
             
@@ -592,9 +592,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-20</td>
                     <td class="ex_end">08-20</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-19</td>
+                    <td class="date_end">08-19</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -605,9 +605,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-20</td>
                     <td class="ex_end">08-20</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-19</td>
+                    <td class="date_end">08-19</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -618,9 +618,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-23</td>
                     <td class="ex_end">08-23</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-19</td>
+                    <td class="date_end">08-19</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="do">
