--- a/pages/SA/SA010201_03.html
+++ b/pages/SA/SA010201_03.html
@@ -89,7 +89,7 @@
                                             data-editable="true" 
                                             data-columns='[
                                             { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                                            { "title": "NO.", "width": 50 },
+                                            { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                                             { "field": "상품코드", "width": 90 },
                                             { "field": "상품명", "width": 170 },
                                             { "field": "어플리케이션", "width": 146 },
@@ -142,7 +142,7 @@
                                             data-editable="true" 
                                             data-columns='[
                                             { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                                            { "title": "NO.", "width": 50 },
+                                            { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                                             { "field": "상품코드", "width": 90 },
                                             { "field": "상품명", "width": 170 },
                                             { "field": "어플리케이션", "width": 146 },
@@ -192,7 +192,7 @@
                                             data-editable="true" 
                                             data-columns='[
                                             { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                                            { "title": "NO.", "width": 50 },
+                                            { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                                             { "field": "상품코드", "width": 90 },
                                             { "field": "상품명", "width": 170 },
                                             { "field": "어플리케이션", "width": 146 },
